<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Cebolão Lotofácil Generator</string>
    <string name="app_version">1.0.0</string>
    <string name="app_version_name">1.0.1</string>
    <string name="concurso">Concurso</string>
    <string name="filtros_salvos_sucesso">Configurações de filtros salvas com sucesso!</string>
    <string name="filtros_salvos_com_sucesso">Filtros salvos com sucesso!</string>
    <string name="falha_salvar_filtros">Falha ao salvar as configurações de filtros.</string>
    <string name="filtros_carregados_sucesso">Configurações de filtros carregadas com sucesso!</string>
    <string name="falha_carregar_filtros">Falha ao carregar as configurações de filtros.</string>
    <string name="nenhum_filtro_salvo">Nenhuma configuração de filtro salva anteriormente.</string>
    <string name="titulo_gerenciamento_jogos">Gerenciar Jogos Salvos</string>
    <string name="salvar_jogo_atual">Salvar Jogo Atual</string>
    <string name="carregar_ultimo_jogo">Carregar Último Jogo</string>
    <string name="excluir_todos_jogos">Excluir Todos os Jogos</string>
    <string name="confirmar_exclusao_titulo">Confirmar Exclusão</string>
    <string name="confirmar_exclusao_mensagem">Tem certeza que deseja excluir todos os jogos salvos?
        Esta ação não pode ser desfeita.</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="jogos_excluidos_sucesso">Todos os jogos salvos foram excluídos.</string>
    <string name="falha_excluir_jogos">Falha ao excluir os jogos salvos.</string>
    <string name="nenhum_jogo_salvo">Nenhum jogo salvo encontrado.</string>
    <string name="jogo_carregado_sucesso">Último jogo salvo carregado com sucesso.</string>
    <string name="falha_carregar_jogo">Falha ao carregar o último jogo salvo.</string>
    <string name="jogo_salvo_sucesso">Jogo atual salvo com sucesso.</string>
    <string name="falha_salvar_jogo">Falha ao salvar o jogo atual.</string>
    <string name="titulo_configuracoes">Configurações</string>
    <string name="label_manter_tela_ligada">Manter tela ligada durante o uso do app</string>
    <string name="label_tema_app">Tema do Aplicativo</string>
    <string-array name="temas_app">
        <item>Claro</item>
        <item>Escuro</item>
        <item>Padrão do Sistema</item>
    </string-array>
    <string name="preferencias_salvas">Preferências salvas.</string>
    <string name="titulo_conferencia">Conferir Resultado</string>
    <string name="label_concurso">Número do Concurso (Opcional)</string>
    <string name="hint_concurso">Ex: 2500</string>
    <string name="label_numeros_sorteados">Números Sorteados (15 dezenas)</string>
    <string name="hint_numeros_sorteados">Selecione 15 números</string>
    <string name="label_seus_jogos">Seus Jogos para Conferência</string>
    <string name="hint_seus_jogos">Insira seus jogos, um por linha, separados por vírgula ou espaço.
        Ex: 01,02,03...</string>
    <string name="botao_conferir">Conferir Jogos</string>
    <string name="resultado_conferencia">Resultado da conferência: %1$d acertos</string>
    <string name="erro_entrada_numeros_sorteados">Por favor, insira 15 números sorteados válidos.</string>
    <string name="erro_entrada_seus_jogos">Por favor, insira pelo menos um jogo para conferir.</string>
    <string name="erro_numeros_invalidos_jogo">Jogo inválido: %s. Verifique os números.</string>
    <string name="acertos_label">Acertos: %d</string>
    <string name="jogo_n_label">Jogo %d:</string>
    <string name="importar_jogos_salvos">Importar Jogos Salvos</string>
    <string name="jogos_importados_sucesso">Jogos salvos importados para conferência!</string>
    <string name="nenhum_jogo_salvo_importar">Nenhum jogo salvo para importar.</string>
    <string name="falha_importar_jogos">Falha ao importar jogos salvos.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="informe_15_dezenas_sorteadas">Informe as 15 dezenas sorteadas.</string>
    <string name="informe_jogos_para_conferencia">Informe os jogos para conferência.</string>
    <string name="concurso_numero_formatado">Concurso N° %d</string>
    <string name="erro_conferir_jogos">Erro ao conferir os jogos. Tente novamente.</string>
    <string name="erro_numero_concurso_invalido">Número do concurso inválido.</string>
    <string name="erro_quantidade_numeros_invalida">Quantidade de números inválida. Selecione 15
        números.</string>
    <string name="resultado_salvo_com_sucesso">Resultado salvo com sucesso!</string>
    <string name="concurso_nao_selecionado">Nenhum concurso selecionado</string>
    <string name="bottom_nav_item_principal">Principal</string>
    <string name="bottom_nav_item_filtros">Filtros</string>
    <string name="bottom_nav_item_conferencia">Conferência</string>
    <string name="bottom_nav_item_gerenciamento">Jogos</string>
    <string name="bottom_nav_item_configuracoes">Ajustes</string>
    <string name="ok">OK</string>
    <string name="aviso">Aviso</string>
    <string name="erro">Erro</string>
    <string name="aguarde">Aguarde...</string>
    <string name="titulo_tela_conferencia">Conferência de Resultados</string>
    <string name="resultados_anteriores">Resultados Anteriores</string>
    <string name="nenhum_resultado_anterior">Nenhum resultado anterior cadastrado.</string>
    <string name="adicionar_novo_resultado">Adicionar Novo Resultado</string>
    <string name="numero_concurso">Número do Concurso</string>
    <string name="numeros_sorteados">Números Sorteados (separados por espaço, vírgula ou traço)</string>
    <string name="selecionar_data">Selecionar Data</string>
    <string name="salvar_resultado">Salvar Resultado</string>
    <string name="resultado_atual">Resultado Atual</string>
    <string name="conferir_jogos">Conferir Jogos</string>
    <string name="jogos_conferidos">Jogos Conferidos</string>
    <string name="nenhum_jogo_conferido">Nenhum jogo conferido. Use o botão acima para conferir seus
        jogos.</string>
    <string name="titulo_tela_configuracoes">Configurações</string>
    <string name="icone_tema">Ícone de tema</string>
    <string name="tema_aplicativo">Tema do Aplicativo</string>
    <string name="icone_sobre">Ícone de informações</string>
    <string name="sobre_o_app">Sobre o Aplicativo</string>
    <string name="versao_e_creditos">Versão e créditos</string>
    <string name="titulo_tela_gerenciamento">Gerenciamento de Jogos</string>
    <string name="todos">Todos</string>
    <string name="favoritos">Favoritos</string>
    <string name="conferidos">Conferidos</string>
    <string name="nenhum_jogo_encontrado">Nenhum jogo encontrado.</string>
    <string name="limpar_todos">Limpar Todos os Jogos</string>
    <string name="marcar_como_favorito">Marcar como favorito</string>
    <string name="excluir_jogo">Excluir jogo</string>
    <string name="jogo_caracteristicas">P: %1$d | I: %2$d | Soma: %3$d</string>
    <string name="jogo_caracteristicas_detalhes">Primos: %1$d | Fib: %2$d\nMiolo: %3$d | Moldura:
        %4$d\nMúlt. 3: %5$d</string>
    <string name="jogo_caracteristicas_compacto">P/I: %1$d/%2$d | Soma: %3$d | Pri: %4$d | Fib: %5$d</string>
    <string name="jogo_acertos">Acertos: %1$d</string>
    <string name="jogo_data_criacao">Criado em: %1$s</string>
    <string name="resultado_concurso">Concurso %1$d</string>
    <string name="resultado_data">Data: %1$s</string>
    <string name="resultado_numeros_parciais">%1$s…</string>
    <string name="premio_15_acertos">15 acertos - Prêmio principal!</string>
    <string name="premio_14_acertos">14 acertos - Prêmio secundário</string>
    <string name="premio_13_acertos">13 acertos - Prêmio terciário</string>
    <string name="premio_12_acertos">12 acertos</string>
    <string name="premio_11_acertos">11 acertos</string>
    <string name="sem_premio">Sem prêmio</string>
    <string name="tema_claro">Claro</string>
    <string name="tema_escuro">Escuro</string>
    <string name="tema_sistema">Padrão do Sistema</string>
    <string name="selecionar_tema">Selecionar Tema</string>
    <string name="cancelar">Cancelar</string>
    <string name="versao_app">Versão do aplicativo: %s</string>
    <string name="descricao_app">Cebolão Lotofácil Generator ajuda você a criar e conferir seus
        jogos da Lotofácil.</string>
    <string name="desenvolvido_por">Desenvolvido por Um Programador Entusiasta</string>
    <string name="fechar">Fechar</string>
    <string name="filtros_resetados">Filtros resetados para os valores padrão.</string>
    <string name="valor_filtro_pares_impares">Ímpares: %1$d-%2$d</string>
    <string name="valor_filtro_soma_total">Soma: %1$d-%2$d</string>
    <string name="valor_filtro_primos">Primos: %1$d-%2$d</string>
    <string name="valor_filtro_fibonacci">Fibonacci: %1$d-%2$d</string>
    <string name="valor_filtro_miolo_moldura">Miolo: %1$d-%2$d</string>
    <string name="valor_filtro_multiplos_tres">Múltiplos de 3: %1$d-%2$d</string>
    <string name="erro_quantidade_jogos_invalida">Quantidade de jogos inválida</string>
    <string name="na_aplicado">N/A - Não aplicado</string>
    <string name="info_nenhum_jogo_gerado_filtros">Nenhum jogo foi gerado com os filtros atuais.
        Considere relaxar os critérios.</string>
    <string name="erro_numero_excluido_nao_pode_ser_fixo">Um número excluído não pode ser fixo.</string>
    <string name="erro_maximo_numeros_fixos_atingido">Número máximo de números fixos atingido.</string>
    <string name="erro_numero_fixo_nao_pode_ser_excluido">Um número fixo não pode ser excluído.</string>
    <string name="erro_maximo_numeros_excluidos_atingido">Número máximo de números excluídos
        atingido.</string>
    <string name="erro_quantidade_numeros_fixos_invalida">Quantidade de números fixos inválida.</string>
    <string name="erro_quantidade_numeros_excluidos_invalida">Quantidade de números excluídos
        inválida.</string>
    <string name="erro_numeros_sobreposicao">Números em sobreposição: %1$s</string>
    <string name="erro_gerar_jogos_parametros_invalidos">Erro ao gerar jogos: parâmetros inválidos.</string>
    <string name="erro_desconhecido_geracao">Erro desconhecido durante a geração de jogos.</string>
    <string name="erro_repositorio_indisponivel">Repositório de dados não está disponível. Não foi
        possível salvar.</string>
    <string name="mensagem_confirmar_exclusao_jogo">Excluir o jogo: %s?</string>
    <string name="jogo_excluido">Jogo excluído.</string>
    <string name="confirmar_limpar_todos">Limpar Todos os Jogos?</string>
    <string name="mensagem_confirmar_limpar_todos">Tem certeza que deseja excluir todos os jogos
        desta lista? Esta ação não pode ser desfeita.</string>
    <string name="todos_jogos_excluidos">Todos os jogos foram excluídos.</string>
    <string name="numeros_jogados">Números Jogados: %s</string>
    <string name="data_geracao">Gerado em: %s</string>
    <string name="caracteristicas_jogo">Características do Jogo:</string>
    <string name="pares_impares">Pares: %1$d | Ímpares: %2$d</string>
    <string name="soma_total">Soma Total: %d</string>
    <string name="numeros_primos">Primos: %d</string>
    <string name="numeros_fibonacci">Fibonacci: %d</string>
    <string name="miolo_moldura">Miolo: %1$d | Moldura: %2$d</string>
    <string name="multiplos_tres">Múltiplos de 3: %d</string>
    <string name="detalhes_do_jogo">Detalhes do Jogo</string>
    <string name="erro_gerar_jogos">Erro ao gerar jogos. Verifique os filtros ou tente novamente.</string>
    <string name="nenhum_jogo_para_salvar">Nenhum jogo gerado para salvar.</string>
    <string name="jogos_salvos_com_sucesso">Jogos salvos com sucesso!</string>
    <string name="nenhum_resultado_selecionado">Nenhum resultado selecionado</string>
    <string name="nenhum_jogo_conferido_para_exibir">Nenhum jogo conferido para exibir</string>
</resources>